After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 700213 - rtpgstpay: sticky events are not forwarded to to the src pad
rtpgstpay: sticky events are not forwarded to to the src pad
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
1.0.6
Other Linux
: Normal normal
: 1.1.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-05-13 07:18 UTC by Patricia Muscalu
Modified: 2013-05-13 11:45 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Patricia Muscalu 2013-05-13 07:18:06 UTC
After this commit 9532b04947baf701585a8643c90b1e1c48498be3:

rtpgstpay: fix invalid memory access in event handler
    
    First process event in payloader, then hand it to the
    base class which takes ownership of the event.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=699637

the sticky events are not properly forwarded to the src pad.
Comment 1 Sebastian Dröge (slomo) 2013-05-13 08:46:59 UTC
Do you have a testcase to reproduce this? This shows stream-start, caps, event, multiple buffers, and eos arriving just fine on the fakesink:

gst-launch-1.0 videotestsrc num-buffers=2 ! rtpgstpay ! fakesink silent=false -v
Comment 2 Patricia Muscalu 2013-05-13 11:01:52 UTC
I can reproduce it by applying the gst-rtsp-server patch (see https://bugzilla.gnome.org/show_bug.cgi?id=699220) and running the following unit test:

GST_CHECKS=test_client_sdp make -C tests/check gst/client.check

With the commit 9532b in gst-plugins-good, the test client in gst-rtsp-server fails. The reason of this failure is that the max-bitrate tag is not forwarded to the src pad of the rtpgst payloader and no bandwidth line is generated by the server.
Comment 3 Sebastian Dröge (slomo) 2013-05-13 11:45:10 UTC
commit f28ab45f3e31f1bd7f3709d99b88709747e726ef
Author: Sebastian Dröge <sebastian.droege@collabora.co.uk>
Date:   Mon May 13 10:43:32 2013 +0200

    rtpgstpay: First let baseclass handle events, then put them into the stream
    
    Fixes handling of sticky events.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=700213