rtpgstpay: First let baseclass handle events, then put them into the stream

Fixes handling of sticky events.

https://bugzilla.gnome.org/show_bug.cgi?id=700213