gst/rtp/gstrtpgstpay.c
@@ -308,6 +308,10 @@ gst_rtp_gst_pay_sink_event (GstRTPBasePayload * payload, GstEvent * event)
 
   rtpgstpay = GST_RTP_GST_PAY (payload);
 
+  ret =
+      GST_RTP_BASE_PAYLOAD_CLASS (parent_class)->sink_event (payload,
+      gst_event_ref (event));
+
   switch (GST_EVENT_TYPE (event)) {
     case GST_EVENT_TAG:
       etype = 1;
@@ -348,7 +352,7 @@ gst_rtp_gst_pay_sink_event (GstRTPBasePayload * payload, GstEvent * event)
     gst_rtp_gst_pay_flush (rtpgstpay, GST_CLOCK_TIME_NONE);
   }
 
-  ret = GST_RTP_BASE_PAYLOAD_CLASS (parent_class)->sink_event (payload, event);
+  gst_event_unref (event);
 
   return ret;
 }
